fixed the header flow on mobile

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: ;
   width: 100vw;
   position: fixed;
   top: 0;
@@ -169,7 +168,21 @@ iframe {
     height: 80vw;
   }
   
+  h1 {
+    font-size: 8vw;
+  }
+
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .form-container {
+    margin-top: 40vw;
+  }
+
   .footer {
     width: 100vw;
   }
+
 }
